--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -64,6 +64,8 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+
 .wrapper {
 	/* background: yellow; */
 	width: 876px;
@@ -84,96 +86,86 @@ nav a{
 	margin-right: 55px;
 	color:lightgrey;
 	text-decoration: none;
-	/* font-weight:bold; */
-	padding: 8px 0;
-	
+	padding: 8px 0;	
 }
 
-header {
-	/* background:green; */
-	display:flex;
-	justify-content: space-evenly;
-	margin-top:50px;
+h4 {
+	font-size: 25px;	
+}
+
+#services-HeaderText {
+	padding-top: 50px;
+	border-bottom: 1px solid black;
 	padding-bottom: 50px;
-	border-bottom: 1px solid black;
+	font-weight:bold;
 }
 
-.headerText{
-	/* border: 2px solid white; */
+.services-MiddleInfo{
+	display:flex;
 	flex-direction: column;
-	display:flex;
-	text-align: center;
-	font-size: 75px;
-	padding: 60px 0;
-	
+	margin-top:40px;
+	justify-content: space-between;
+	border-bottom: 2px solid black;
 }
 
-.button {
-	background: white;
-	color:black;
-	border: 1px solid black;
-	width: 150px;
-	height: 40px;
-	margin: 0 auto;
-	padding: 5px 25px 5px;
+.firstContent, .thirdContent, .secondContent {
+	display:flex;
+	width: 100%;
+	justify-content: space-between;
+}
+
+#digitalDesign, #marketing, #iosDev {
 	display:block;
+	background: #F4F4F4;
+	border:1px solid black;
+	padding:20px;
+	margin-right:40px;
+	margin-bottom:40px;
 }
 
-h2{
-	font-weight: bold;
+#uxui, #webDev, #androidDev {
+	display:block;
+	background: #F4F4F4;
+	border:1px solid black;
+	padding:20px;
+	margin-bottom:40px;
 }
 
-.indexP {
-	font-size: 110%;
+.services-Button {
+	display:block;
+	background: white;
+	border: 1px solid black;
+	border-radius: 5px;
+	margin-top:20px;
+	padding: 9px 35px;
+	font-size: 11px;
+
 }
 
-.topInfo {
+.sections-Footer {
 	display:flex;
+	width: 100%;
 	justify-content: space-between;
-	margin:25px 0;
+	margin-top: 40px;
+	margin-bottom: 80px;
 }
 
-#features {
-	width: 49%;
+.sections-FooterText {
+	width:50%;	
 }
 
-#about {
-	width: 49%;
-}
-
-.middleInfo {
-	display:flex;
-	justify-content: space-between;
-	padding-top: 25px;
-	padding-bottom:40px;
-	border-bottom: 1px solid black;
-	
-}
-
-#services {
-	width:60%;
-}
-
-#products {
-	width:60%;
-}
-
-#vision {
-	width:60%;
-}
-
-footer {
-	padding:50px 0;
-}
 
 .copyright {
 	text-align: center;
 }
 
+.footerList {
+	margin-left: 20px;
+}
 
-
-
-
+h3{
+	font-weight: bold;
+}
 
 
 
